# blf-pcap-prepare-tool

./: .gitignore  LICENSE  PcapPrepare.spec  README.md  comparator.py  generate_mixed_test_data.py  generate_test_data.py  main.py  pyproject.toml  test_compare.py
gui/: diff_widget.py  main_window.py  result_widget.py  styles.py
parsers/: __init__.py  blf_parser.py  models.py  pcap_parser.py
test_data/: test_common.blf  test_common.pcap  test_mixed.blf  test_mixed.pcap  test_unique_a.blf  test_unique_a.pcap  test_unique_b.blf  test_unique_b.pcap
