[project]
name = "pcap-prepare"
version = "0.1.0"
description = "PCAP and BLF file comparison tool for SomeIP and CAN analysis"
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5.0",
    "python-can>=4.0.0",
    "asammdf>=7.0.0",
    "PySide6>=6.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyinstaller]
name = "PcapPrepare"
